--- a/CoverageX/CoverageIncr.Configurations/CoverageIncr.Configurations.csproj
+++ b/CoverageX/CoverageIncr.Configurations/CoverageIncr.Configurations.csproj
@@ -7,7 +7,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Extensions\" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
+      <PackageReference Include="Tomlyn" Version="0.19.0" />
+      <PackageReference Include="YamlDotNet" Version="16.3.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\src\CoverageIncr.Shared\CoverageIncr.Shared.csproj" />
     </ItemGroup>
 
 </Project>
