--- a/CoverageX/src/CoverageIncr.ConsoleApp/CoverageIncr.ConsoleApp.csproj
+++ b/CoverageX/src/CoverageIncr.ConsoleApp/CoverageIncr.ConsoleApp.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <OutputType>Exe</OutputType>
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
@@ -8,9 +9,11 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\CoverageIncr.Configurations\CoverageIncr.Configurations.csproj" />
-      <ProjectReference Include="..\CoverageIncr.Exporters\CoverageIncr.Exporters.csproj" />
-      <ProjectReference Include="..\CoverageIncr.Processors\CoverageIncr.Processors.csproj" />
-      <ProjectReference Include="..\CoverageIncr.Receivers\CoverageIncr.Receivers.csproj" />
+      <ProjectReference Include="..\CoverageIncr.Pipelines\CoverageIncr.Pipelines.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
     </ItemGroup>
 
 </Project>
