--- a/CoverageX/src/CoverageIncr.Receivers/CoverageIncr.Receivers.csproj
+++ b/CoverageX/src/CoverageIncr.Receivers/CoverageIncr.Receivers.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\CoverageIncr.Shared\CoverageIncr.Shared.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" Version="9.0.0" />
+    </ItemGroup>
+
 </Project>
