--- a/CoverageX/src/CoverageIncr.Pipelines/CoverageIncr.Pipelines.csproj
+++ b/CoverageX/src/CoverageIncr.Pipelines/CoverageIncr.Pipelines.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\CoverageIncr.Configurations\CoverageIncr.Configurations.csproj" />
+      <ProjectReference Include="..\CoverageIncr.Configurations\CoverageIncr.Configurations.csproj" />
       <ProjectReference Include="..\CoverageIncr.Exporters\CoverageIncr.Exporters.csproj" />
       <ProjectReference Include="..\CoverageIncr.Processors\CoverageIncr.Processors.csproj" />
       <ProjectReference Include="..\CoverageIncr.Receivers\CoverageIncr.Receivers.csproj" />
