--- a/CoverageX/src/CoverageIncr.Shared/CoverageIncr.Shared.csproj
+++ b/CoverageX/src/CoverageIncr.Shared/CoverageIncr.Shared.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="LibGit2Sharp" Version="0.31.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.8" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.8" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.8" />
